--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "xinlai He",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
@@ -16,7 +17,8 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
