--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
